Feat/resource (#4)
* feat/addedSwagger

* comment out test

* comment out test

* removed default tests

* removed default tests

* removed default tests

* feat/added_price_&_apiResource

* feat/added_price_&_apiResource

---------
